Dialog for reporting links and comments (#18)
* Set up basics of Activity & dialog for reporting listings

* Make API call for report form and pass options into ReportDialog

* Pass result back to ReportActivity and display Toast for now

* Fixed theme for ReportActivity

* Refactoring

* Switch to calling subreddit rules endpoint

* Refactoring

* Added API call for reporting listings

* Fixing cancel behavior

* WIP - Display success message when reporting listings

* Set compileSdkVersion to 24 for debug builds only

* Fix crash in ReportActivity

* WIP - Custom view for report dialog

* WIP - Custom view for report dialog

* Limit one checked button at a time

* Added option for the 'other' report category

* Refactoring

* Update RxReddit to fix report serialization issue

* Refactoring

* Fixing result from ReportActivity

* Refactoring

* Error handling for report dialog

* Refactoring

* Ported site rules to resources

* Applying fix for other_reason issue

* Refactoring

* Refactoring

* Refactoring

--- a/app/src/main/res/values/strings-links.xml
+++ b/app/src/main/res/values/strings-links.xml
@@ -19,5 +19,7 @@
         the full list of comments</string>
     <string name="listings_link_saved_description">saved</string>
     <string name="listings_link_stickied_description">stickied</string>
+    <string name="report_successful">report successful</string>
+    <string name="report_error">error submitting report, please try again later</string>
 
 </resources>
