--- a/app/src/main/res/values/strings-dialogs.xml
+++ b/app/src/main/res/values/strings-dialogs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="dialog_sign_out_title">Sign out</string>
     <string name="dialog_sign_out_message">Sign out from user account?</string>
     <string name="dialog_sign_out_ok">OK</string>
@@ -14,4 +15,15 @@
     <string name="dialog_nsfw_message">You must be over 18 to view content on this subreddit</string>
     <string name="dialog_nsfw_confirm">Continue</string>
     <string name="dialog_nsfw_decline">Take me back</string>
+    <string name="report_submit">report</string>
+    <string name="report_cancel">cancel</string>
+    <string name="report_menu_title">Report</string>
+    <string name="report_other_hint">other reason</string>
+
+    <string-array name="report_site_rules">
+        <item>Spam</item>
+        <item>Personal and confidential information</item>
+        <item>Threatening, harassing, or inciting violence</item>
+    </string-array>
+
 </resources>
