--- a/app/src/main/res/layout/report_dialog_view.xml
+++ b/app/src/main/res/layout/report_dialog_view.xml
@@ -2,9 +2,7 @@
 <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp">
+        android:layout_height="match_parent" >
 
     <RadioGroup
             android:id="@+id/dialog_view_group"
@@ -12,6 +10,7 @@
             android:layout_height="wrap_content"
             android:showDividers="middle"
             android:divider="@drawable/spacer_8dp_h"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:padding="16dp"/>
 
 </ScrollView>
