--- a/app/src/main/res/layout/report_dialog_view_choice_item.xml
+++ b/app/src/main/res/layout/report_dialog_view_choice_item.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RadioButton
-        android:id="@+id/report_choice_item_selector"
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:includeFontPadding="false"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:textColor="@color/primary_text"
-        android:textSize="18sp"
-        tools:text="Lorem ipsum" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+    <RadioButton
+            android:id="@+id/report_choice_item_selector"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" />
+
+    <TextView
+            android:id="@+id/report_choice_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/report_other_hint"
+            android:includeFontPadding="false"
+            android:textColor="@color/primary_text"
+            android:textSize="18sp"
+            tools:text="Lorem ipsum" />
+
+</LinearLayout>
