--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -86,13 +86,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                    <TextView
-                            android:id="@+id/link_score"
-                            style="@style/LinkMetadataTextViewLight"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            tools:text="573 points" />
-
                     <com.ddiehl.timesincetextview.TimeSinceTextView
                             android:id="@+id/link_timestamp"
                             style="@style/LinkMetadataTextViewLight"
@@ -102,18 +95,26 @@
                             android:layout_alignParentRight="true"
                             tools:text="2 days ago" />
 
+                    <TextView
+                            android:id="@+id/link_score"
+                            style="@style/LinkMetadataTextViewLight"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_toLeftOf="@id/link_timestamp"
+                            android:layout_toStartOf="@id/link_timestamp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginRight="4dp"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            tools:text="573 points" />
+
                 </RelativeLayout>
 
                 <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-
-                    <com.ddiehl.android.htn.view.ColorSwapTextView
-                            android:id="@+id/link_author"
-                            style="@style/LinkMetadataTextViewLight"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            tools:text="/u/andrewsmith1984" />
 
                     <TextView
                             android:id="@+id/link_subreddit"
@@ -123,6 +124,21 @@
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentRight="true"
                             tools:text="/r/AskReddit" />
+
+                    <com.ddiehl.android.htn.view.ColorSwapTextView
+                            android:id="@+id/link_author"
+                            style="@style/LinkMetadataTextViewLight"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_toLeftOf="@id/link_subreddit"
+                            android:layout_toStartOf="@id/link_subreddit"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginRight="4dp"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            tools:text="/u/andrewsmith1984" />
 
                 </RelativeLayout>
 
