Support resizable windows in Android N (#30)
* Declare app resizable

* Refactoring lifecycle in SettingsFragment

* Fixing data loading in SubscriptionManagerActivity on rotation

* Fixing data loading in SubredditInfoActivity on rotation

* Moving some actions from onResume to onStart

* Formatting

* Fixing size of trophies in user profile

* Encapsulated trophy case in custom view

* Fixed trophy size

* Renamed TrophyCaseLayout

* Refactoring

--- a/app/src/main/res/layout/trophy.xml
+++ b/app/src/main/res/layout/trophy.xml
@@ -3,8 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/trophy_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="@dimen/baseline_spacing"
         android:layout_marginRight="@dimen/baseline_spacing"
         android:layout_marginBottom="@dimen/baseline_spacing"
