--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -125,9 +125,7 @@
                             android:layout_alignParentRight="true"
                             tools:text="/r/AskReddit" />
 
-                    <com.ddiehl.android.htn.view.ColorSwapTextView
-                            android:id="@+id/link_author"
-                            style="@style/LinkMetadataTextViewLight"
+                    <FrameLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
@@ -135,10 +133,18 @@
                             android:layout_toLeftOf="@id/link_subreddit"
                             android:layout_toStartOf="@id/link_subreddit"
                             android:layout_marginEnd="4dp"
-                            android:layout_marginRight="4dp"
-                            android:ellipsize="end"
-                            android:maxLines="1"
-                            tools:text="/u/andrewsmith1984" />
+                            android:layout_marginRight="4dp" >
+
+                        <com.ddiehl.android.htn.view.ColorSwapTextView
+                                android:id="@+id/link_author"
+                                style="@style/LinkMetadataTextViewLight"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:ellipsize="end"
+                                android:maxLines="1"
+                                tools:text="/u/andrewsmith1984" />
+
+                    </FrameLayout>
 
                 </RelativeLayout>
 
