--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -131,7 +131,7 @@
 
     </FrameLayout>
 
-    <com.ddiehl.android.htn.view.MarkdownTextView
+    <TextView
             android:id="@+id/comment_body"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
