Substitute MarkdownTextView for HtmlProcessor and MarkdownFormatter implementations

--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -207,7 +207,7 @@
 
         </LinearLayout>
 
-        <com.ddiehl.android.htn.view.MarkdownTextView
+        <TextView
                 android:id="@+id/link_self_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
