--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -165,7 +165,7 @@
 
         </FrameLayout>
 
-        <com.ddiehl.android.htn.view.MarkdownTextView
+        <TextView
                 android:id="@+id/link_self_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
