--- a/app/src/main/res/layout/message_layout.xml
+++ b/app/src/main/res/layout/message_layout.xml
@@ -101,7 +101,7 @@
 
                 </LinearLayout>
 
-                <com.ddiehl.android.htn.view.MarkdownTextView
+                <TextView
                         android:id="@+id/last_message_body"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
