--- a/app/src/main/res/layout/submission_fragment.xml
+++ b/app/src/main/res/layout/submission_fragment.xml
@@ -25,17 +25,15 @@
                     android:layout_height="wrap_content"
                     android:background="@null">
 
-                <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:tag="link"
-                        android:text="@string/submission_type_link" />
+                <!--<android.support.design.widget.TabItem-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/submission_type_link" />-->
 
-                <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:tag="text"
-                        android:text="@string/submission_type_text" />
+                <!--<android.support.design.widget.TabItem-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/submission_type_text" />-->
 
             </android.support.design.widget.TabLayout>
 
