--- a/app/src/main/res/layout/submission_fragment.xml
+++ b/app/src/main/res/layout/submission_fragment.xml
@@ -23,19 +23,7 @@
                     android:id="@+id/submission_type_tabs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@null">
-
-                <!--<android.support.design.widget.TabItem-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/submission_type_link" />-->
-
-                <!--<android.support.design.widget.TabItem-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/submission_type_text" />-->
-
-            </android.support.design.widget.TabLayout>
+                    android:background="@null" />
 
             <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -56,8 +44,10 @@
                     android:id="@+id/submission_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="96dp"
                     android:contentDescription="@null"
-                    tools:src="@drawable/excited_kitten" />
+                    android:src="@drawable/ic_insert_photo_black_24dp"
+                    android:tint="@color/gray70" />
 
             <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
