--- a/app/src/main/res/layout/submission_fragment.xml
+++ b/app/src/main/res/layout/submission_fragment.xml
@@ -92,9 +92,12 @@
                     android:id="@+id/submission_submit"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
+                    android:layout_margin="16dp"
+                    android:elevation="8dp"
                     android:background="@color/primary_dark"
                     android:text="@string/submission_submit"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    tools:targetApi="lollipop" />
 
         </LinearLayout>
 
