Added logic for submitting post via API

--- a/app/src/main/res/layout/listings_fragment.xml
+++ b/app/src/main/res/layout/listings_fragment.xml
@@ -25,4 +25,13 @@
 
     </LinearLayout>
 
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/submit_new_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add_black_24dp"
+            android:tint="@color/white" />
+
 </android.support.design.widget.CoordinatorLayout>
