[wip] adaptive icon

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,6 +35,7 @@
     <color name="nsfw_tag_color">#d10023</color>
     <color name="link_color">#0000ee</color>
     <color name="link_saved_color">@color/reddit_blue_full</color>
+    <color name="ic_launcher_background">#CFD8DC</color>
 
     <!-- reddit color scheme -->
     <!-- https://www.reddit.com/about/alien/ -->
