--- a/app/src/main/res/values/strings-links.xml
+++ b/app/src/main/res/values/strings-links.xml
@@ -7,8 +7,8 @@
         <item quantity="other">%d points</item>
     </plurals>
     <string name="link_gilded_text">&#160;× %d</string>
-    <string name="link_subreddit">/r/%s</string>
-    <string name="link_author">/u/%s</string>
+    <string name="link_subreddit">r/%s</string>
+    <string name="link_author">u/%s</string>
     <string name="link_domain">%s</string>
     <plurals name="link_comment_count">
         <item quantity="one">%d comment</item>
