--- a/app/src/main/res/values/strings-comments.xml
+++ b/app/src/main/res/values/strings-comments.xml
@@ -10,8 +10,8 @@
     <string name="listing_comment_subject_commentreply">comment reply</string>
     <string name="listing_comment_subject_postreply">post reply</string>
     <string name="listing_comment_subject_usernamemention">username mention</string>
-    <string name="listing_comment_subtitle_format">by /u/%2$s on /r/%1$s</string>
-    <string name="listing_comment_inbox_subtitle_format">%2$s on /r/%1$s</string>
+    <string name="listing_comment_subtitle_format">by u/%2$s on r/%1$s</string>
+    <string name="listing_comment_inbox_subtitle_format">%2$s on r/%1$s</string>
     <string name="comment_metadata_divider">•</string>
     <string name="comment_controversiality_indicator">†</string>
     <string name="comment_edit_text_hint">markdown supported</string>
