--- a/app/src/main/res/layout/subreddit_info_fragment.xml
+++ b/app/src/main/res/layout/subreddit_info_fragment.xml
@@ -62,6 +62,7 @@
                         android:layout_centerVertical="true"
                         android:layout_toLeftOf="@id/subscribe_button_text"
                         android:layout_toStartOf="@id/subscribe_button_text"
+                        android:contentDescription="@null"
                         android:src="@drawable/ic_done_black_24dp"
                         android:tint="@color/white" />
 
@@ -75,8 +76,7 @@
                         android:layout_toStartOf="@id/subscribe_button_text"
                         android:indeterminate="true"
                         android:indeterminateTint="@color/white"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
