--- a/app/src/main/res/layout/subreddit_info_fragment.xml
+++ b/app/src/main/res/layout/subreddit_info_fragment.xml
@@ -37,48 +37,58 @@
                     android:layout_width="match_parent"
                     android:layout_height="16dp" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:id="@+id/subscribe_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="64dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/button_bg"
                     android:focusable="true">
+
+                    <FrameLayout
+                        android:id="@+id/subscribe_button_icon_group"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical">
+
+                        <ImageView
+                            android:id="@+id/subscribe_button_icon"
+                            android:layout_width="@dimen/button_icon_size"
+                            android:layout_height="@dimen/button_icon_size"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="4dp"
+                            android:layout_marginStart="8dp"
+                            android:contentDescription="@null"
+                            android:src="@drawable/ic_done_black_24dp"
+                            android:tint="@color/white" />
+
+                        <ProgressBar
+                            android:id="@+id/subscribe_button_progress"
+                            style="?android:attr/progressBarStyle"
+                            android:layout_width="@dimen/button_icon_size"
+                            android:layout_height="@dimen/button_icon_size"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginStart="8dp"
+                            android:indeterminate="true"
+                            android:indeterminateTint="@color/white"
+                            android:visibility="gone"
+                            tools:visibility="visible"/>
+
+                    </FrameLayout>
 
                     <TextView
                         android:id="@+id/subscribe_button_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
+                        android:layout_gravity="center"
+                        android:includeFontPadding="false"
                         android:padding="8dp"
                         android:textAllCaps="true"
                         android:textColor="@color/white"
                         android:textSize="@dimen/button_text_size"
                         tools:text="@string/subscribed" />
 
-                    <ImageView
-                        android:id="@+id/subscribe_button_icon"
-                        android:layout_width="@dimen/button_icon_size"
-                        android:layout_height="@dimen/button_icon_size"
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@id/subscribe_button_text"
-                        android:layout_toStartOf="@id/subscribe_button_text"
-                        android:contentDescription="@null"
-                        android:src="@drawable/ic_done_black_24dp"
-                        android:tint="@color/white" />
-
-                    <ProgressBar
-                        android:id="@+id/subscribe_button_progress"
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="@dimen/button_icon_size"
-                        android:layout_height="@dimen/button_icon_size"
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@id/subscribe_button_text"
-                        android:layout_toStartOf="@id/subscribe_button_text"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/white"
-                        android:visibility="gone" />
-
-                </RelativeLayout>
+                </LinearLayout>
 
                 <android.support.v4.widget.Space
                     android:layout_width="match_parent"
