Redesign subreddit info screen (#88)

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,7 +34,10 @@
     <dimen name="unread_message_indicator_size">16dp</dimen>
     <dimen name="subscription_icon_width">48dp</dimen>
     <dimen name="subscription_icon_height">48dp</dimen>
-    <dimen name="button_text_size">20sp</dimen>
-    <dimen name="button_icon_size">24dp</dimen>
+    <dimen name="button_text_size">16sp</dimen>
+    <dimen name="button_icon_size">16dp</dimen>
     <dimen name="listings_link_icon_size">20dp</dimen>
+    <dimen name="subreddit_info_section_header_text_size">12sp</dimen>
+    <dimen name="subreddit_info_section_body_text_size">16sp</dimen>
+    <dimen name="subreddit_info_rule_body_text_size">12sp</dimen>
 </resources>
