--- a/app/src/main/res/layout/subreddit_info_fragment.xml
+++ b/app/src/main/res/layout/subreddit_info_fragment.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/coordinator_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ScrollView
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -38,48 +37,58 @@
                     android:layout_width="match_parent"
                     android:layout_height="16dp" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:id="@+id/subscribe_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="64dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/button_bg"
                     android:focusable="true">
+
+                    <FrameLayout
+                        android:id="@+id/subscribe_button_icon_group"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical">
+
+                        <ImageView
+                            android:id="@+id/subscribe_button_icon"
+                            android:layout_width="@dimen/button_icon_size"
+                            android:layout_height="@dimen/button_icon_size"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="4dp"
+                            android:layout_marginStart="8dp"
+                            android:contentDescription="@null"
+                            android:src="@drawable/ic_done_black_24dp"
+                            android:tint="@color/white" />
+
+                        <ProgressBar
+                            android:id="@+id/subscribe_button_progress"
+                            style="?android:attr/progressBarStyle"
+                            android:layout_width="@dimen/button_icon_size"
+                            android:layout_height="@dimen/button_icon_size"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginStart="8dp"
+                            android:indeterminate="true"
+                            android:indeterminateTint="@color/white"
+                            android:visibility="gone"
+                            tools:visibility="visible"/>
+
+                    </FrameLayout>
 
                     <TextView
                         android:id="@+id/subscribe_button_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
+                        android:layout_gravity="center"
+                        android:includeFontPadding="false"
                         android:padding="8dp"
                         android:textAllCaps="true"
                         android:textColor="@color/white"
                         android:textSize="@dimen/button_text_size"
                         tools:text="@string/subscribed" />
 
-                    <ImageView
-                        android:id="@+id/subscribe_button_icon"
-                        android:layout_width="@dimen/button_icon_size"
-                        android:layout_height="@dimen/button_icon_size"
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@id/subscribe_button_text"
-                        android:layout_toStartOf="@id/subscribe_button_text"
-                        android:src="@drawable/ic_done_black_24dp"
-                        android:tint="@color/white" />
-
-                    <ProgressBar
-                        android:id="@+id/subscribe_button_progress"
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="@dimen/button_icon_size"
-                        android:layout_height="@dimen/button_icon_size"
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@id/subscribe_button_text"
-                        android:layout_toStartOf="@id/subscribe_button_text"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/white"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
-
-                </RelativeLayout>
+                </LinearLayout>
 
                 <android.support.v4.widget.Space
                     android:layout_width="match_parent"
@@ -89,15 +98,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/created"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@color/secondary_text" />
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/subreddit_info_section_header_text_size" />
 
                 <TextView
                     android:id="@+id/create_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/primary_text"
+                    android:textSize="@dimen/subreddit_info_section_body_text_size"
                     tools:text="Dec 23, 2013" />
 
                 <android.support.v4.widget.Space
@@ -108,15 +117,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/subscribers"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@color/secondary_text" />
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/subreddit_info_section_header_text_size" />
 
                 <TextView
                     android:id="@+id/subscriber_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/primary_text"
+                    android:textSize="@dimen/subreddit_info_section_body_text_size"
                     tools:text="130,055" />
 
                 <android.support.v4.widget.Space
@@ -127,15 +136,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/description"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@color/secondary_text" />
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/subreddit_info_section_header_text_size" />
 
                 <TextView
                     android:id="@+id/public_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/primary_text"
+                    android:textSize="@dimen/subreddit_info_section_body_text_size"
                     tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sodales sem sit amet augue consectetur blandit. Praesent molestie vulputate aliquet. Quisque posuere hendrerit risus ac feugiat." />
 
                 <android.support.v4.widget.Space
@@ -146,20 +155,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/rules"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@color/secondary_text" />
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/subreddit_info_section_header_text_size" />
 
-                <LinearLayout
+                <android.support.v7.widget.RecyclerView
                     android:id="@+id/rules_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:divider="@drawable/spacer_8dp_h"
-                    android:orientation="vertical"
-                    android:showDividers="middle" />
+                    android:orientation="vertical" />
 
             </LinearLayout>
 
-        </ScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
     </LinearLayout>
 
