dark theme for listings_link

--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    card_view:cardBackgroundColor="?attr/cardTopBackgroundColor"
     android:layout_height="wrap_content"
     card_view:cardElevation="@dimen/link_card_elevation"
     card_view:cardUseCompatPadding="true">
@@ -28,7 +28,7 @@
                 android:fontFamily="sans-serif-light"
                 android:textAlignment="viewStart"
                 android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@color/primary_text"
+                android:textColor="?attr/cardTopTextColor"
                 tools:ignore="UnusedAttribute"
                 tools:text="The quick brown fox jumped over the white fence" />
 
@@ -47,7 +47,7 @@
                     android:includeFontPadding="false"
                     android:text="@string/nsfw"
                     android:textAppearance="?android:textAppearanceSmall"
-                    android:textColor="@color/nsfw_tag_color" />
+                    android:textColor="?attr/nsfwColor" />
 
                 <TextView
                     android:id="@+id/link_gilded_text_view"
@@ -58,7 +58,7 @@
                     android:fontFamily="sans-serif-light"
                     android:gravity="center"
                     android:textAppearance="?android:textAppearanceSmall"
-                    android:textColor="@color/secondary_text"
+                    android:textColor="?attr/cardTopTextSecondaryColor"
                     tools:ignore="UnusedAttribute"
                     tools:text="× 2" />
 
@@ -70,7 +70,7 @@
                     android:fontFamily="sans-serif-light"
                     android:gravity="end"
                     android:textAppearance="?android:textAppearanceSmall"
-                    android:textColor="@color/secondary_text"
+                    android:textColor="?attr/cardTopTextSecondaryColor"
                     tools:targetApi="16"
                     tools:text="imgur.com" />
 
@@ -88,7 +88,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/primary_dark"
+                android:background="?attr/cardBackgroundAccentColor"
                 android:orientation="vertical"
                 android:padding="@dimen/baseline_spacing">
 
@@ -163,7 +163,7 @@
                     android:layout_height="@dimen/comment_data_divider_width"
                     android:layout_marginBottom="@dimen/comment_data_divider_margin"
                     android:layout_marginTop="@dimen/comment_data_divider_margin"
-                    android:background="@color/divider" />
+                    android:background="?attr/dividerColor" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -186,7 +186,7 @@
                         android:layout_height="@dimen/listings_link_icon_size"
                         android:contentDescription="@string/listings_link_saved_description"
                         android:src="@drawable/ic_save_black_24dp"
-                        android:tint="@color/icons" />
+                        android:tint="?attr/iconColor" />
 
                     <ImageView
                         android:id="@+id/link_stickied_view"
@@ -194,7 +194,7 @@
                         android:layout_height="@dimen/listings_link_icon_size"
                         android:contentDescription="@string/listings_link_stickied_description"
                         android:src="@drawable/ic_class_black_24dp"
-                        android:tint="@color/icons" />
+                        android:tint="?attr/iconColor" />
 
                 </LinearLayout>
 
@@ -216,8 +216,8 @@
             android:padding="@dimen/link_self_text_padding"
             android:textAlignment="viewStart"
             android:textAppearance="?android:textAppearanceSmall"
-            android:textColor="@color/primary_text"
-            android:textColorLink="@color/link_color"
+            android:textColor="?attr/cardTopTextColor"
+            android:textColorLink="?attr/textColorLink"
             tools:ignore="UnusedAttribute"
             tools:text="Lorem ipsum dolor sit amet" />
 
