--- a/app/src/main/res/values/attrs_theme.xml
+++ b/app/src/main/res/values/attrs_theme.xml
@@ -4,6 +4,12 @@
     <attr name="textColorPrimary" format="color" />
     <attr name="textColorSecondary" format="color" />
     <attr name="textColorLink" format="color" />
+    <attr name="dividerColor" format="color" />
+    <attr name="iconColor" format="color" />
+
+    <attr name="nsfwColor" format="color" />
+
+    <!-- Link cards -->
     <attr name="cardTopBackgroundColor" format="color" />
     <attr name="cardBackgroundAccentColor" format="color" />
     <attr name="cardTopTextColor" format="color" />
