--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <!-- Custom attributes -->
+        <item name="windowBackgroundColor">@color/primary_light</item>
         <item name="textColorPrimary">@color/gray900</item>
         <item name="textColorSecondary"></item>
         <item name="textColorLink">@color/link_color</item>
@@ -20,9 +21,12 @@
     </style>
 
     <style name="NightThemeColors" parent="AppTheme">
+        <!-- AppCompat theme attributes -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+        <!-- Custom attributes -->
+        <item name="windowBackgroundColor">@color/gray800</item>
         <item name="textColorPrimary">@color/white</item>
         <item name="textColorSecondary"></item>
         <item name="textColorLink">@color/link_color</item>
