--- a/app/src/main/res/layout/navigation_tab_layout.xml
+++ b/app/src/main/res/layout/navigation_tab_layout.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/primary"
-    app:tabTextColor="@color/primary_light"
+    app:tabTextColor="?attr/colorPrimaryLight"
     app:tabSelectedTextColor="@android:color/white"
     app:tabMode="scrollable" />
