--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -3,7 +3,7 @@
 
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_light" />
+            <solid android:color="?attr/colorPrimaryLight" />
             <corners android:radius="2dp" />
         </shape>
     </item>
