--- a/app/src/main/res/values/attrs_theme.xml
+++ b/app/src/main/res/values/attrs_theme.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <attr name="colorPrimaryLight" format="color" />
     <attr name="windowBackgroundColor" format="color" />
     <attr name="textColorPrimary" format="color" />
     <attr name="textColorSecondary" format="color" />
