--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -7,7 +7,8 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <!-- Custom attributes -->
-        <item name="windowBackgroundColor">@color/primary_light</item>
+        <item name="colorPrimaryLight">@color/material_blue_light</item>
+        <item name="windowBackgroundColor">@color/material_blue_light</item>
         <item name="textColorPrimary">@color/gray900</item>
         <item name="textColorSecondary"></item>
         <item name="textColorLink">@color/link_color</item>
@@ -26,7 +27,8 @@
         <item name="colorPrimaryDark">@color/gray900</item>
         <item name="colorAccent">@color/accent</item>
         <!-- Custom attributes -->
-        <item name="windowBackgroundColor">@color/gray800</item>
+        <item name="colorPrimaryLight">@color/gray700</item>
+        <item name="windowBackgroundColor">@color/gray700</item>
         <item name="textColorPrimary">@color/white</item>
         <item name="textColorSecondary"></item>
         <item name="textColorLink">@color/link_color</item>
