theming for navigation drawer

--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -10,6 +10,7 @@
         <item name="colorPrimaryLight">@color/material_blue_light</item>
         <item name="textColorPrimary">@color/gray900</item>
         <item name="textColorSecondary"></item>
+        <item name="textColorHighlight">@color/primary_text</item>
         <item name="textColorLink">@color/link_color</item>
         <item name="dividerColor">@color/divider</item>
         <item name="iconColor">@color/white</item>
@@ -29,6 +30,7 @@
         <item name="colorPrimaryLight">@color/gray700</item>
         <item name="textColorPrimary">@color/white</item>
         <item name="textColorSecondary"></item>
+        <item name="textColorHighlight">@color/white</item>
         <item name="textColorLink">@color/link_color</item>
         <item name="dividerColor">@color/divider</item>
         <item name="iconColor">@color/white</item>
