--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:elevation="@dimen/navigation_drawer_elevation"
+            app:itemTextColor="@drawable/navigation_text_color"
             app:menu="@menu/navigation"
             tools:targetApi="21" />
 
