--- a/app/src/main/res/values/attrs_theme.xml
+++ b/app/src/main/res/values/attrs_theme.xml
@@ -5,6 +5,7 @@
     <attr name="windowBackgroundColor" format="color" />
     <attr name="textColorPrimary" format="color" />
     <attr name="textColorSecondary" format="color" />
+    <attr name="textColorHighlight" format="color" />
     <attr name="textColorLink" format="color" />
     <attr name="dividerColor" format="color" />
     <attr name="iconColor" format="color" />
